--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,13 +18,13 @@ build:
 
 requirements:
   host:
-    - python >=3.8
+    - python {{ python_min }}
     - setuptools
     - pip
   run:
     - docstring_parser
     - typing_extensions
-    - python >=3.8
+    - python >={{ python_min }}
     - boto3
     - botocore
     - docker-py
@@ -47,6 +47,7 @@ test:
     - phi --help
   requires:
     - pip
+    - python {{ python_min }}
 
 about:
   home: https://github.com/phidatahq/phidata
